crates/aranya-policy-compiler/tests/data/facts/bind_key_in_delete_bad_argument.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: bad argument
  |
8 |             delete F[i:?]
  |                        ^ Cannot delete fact with wildcard keys
